# finetune-forge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/examples/: full_ft_qwen3.yaml  lora_phi3_sft.yaml  qlora_llama3_dpo.yaml
finetune_forge/: __init__.py  cli.py
finetune_forge/agents/: __init__.py  configurator.py  data_processor.py  evaluator.py  executor.py  hpo.py  planner.py  publisher.py
finetune_forge/backends/: __init__.py  llamafactory.py
finetune_forge/graph/: __init__.py  pipeline.py
finetune_forge/schemas/: __init__.py  config.py  dataset.py  state.py
finetune_forge/utils/: __init__.py  gpu.py  llm_client.py  logging.py  tracking.py
notebooks/: demo_walkthrough.ipynb
tests/: conftest.py  test_configurator.py  test_data_processor.py  test_evaluator.py  test_executor.py  test_hpo.py  test_llm_client.py  test_pipeline.py  test_planner.py  test_resume.py  test_tracking.py
