[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finetune-forge"
version = "0.1.0"
description = "AI agent for automated LLM fine-tuning, powered by LangGraph + LlamaFactory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FineTuneForge" }]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "anthropic>=0.34.0",
    "pydantic>=2.0",
    "typer>=0.12.0",
    "huggingface_hub>=0.23.0",
    "transformers>=4.45.0",
    "peft>=0.12.0",
    "trl>=0.10.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "mlflow>=2.14.0",
    "torch>=2.3.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.5.0",
]

[project.scripts]
finetune = "finetune_forge.cli:app"

[tool.setuptools.packages.find]
include = ["finetune_forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"
